# odf

./: CMakeLists.txt  INSTALL  LICENCE  LICENSE  README  README.md
doc/: doxy.config.in
include/odf/: boundingbox.h  image.h  odf.h  sat.h  slidingwindow.h
include/odf/private/: image_threshold.cpp.h
src/odf/: CMakeLists.txt  boundingbox.cpp  image.cpp  sat.cpp  slidingwindow.cpp
src/samples/: CMakeLists.txt
src/samples/common/: hsv.h  options.cpp  options.h  range.cpp  range.h
src/samples/face-skin/: CMakeLists.txt  main.cpp
